--- a/.github/workflows/aws-ec2-deploy.yml
+++ b/.github/workflows/aws-ec2-deploy.yml
@@ -1,9 +1,9 @@
-name: Deployment on Production
+name: Deploy to EC2 on Push to Main
 
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
   deploy:
@@ -11,32 +11,27 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 
+        uses: actions/checkout@v3
 
       - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3 
+        uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
 
+      - name: Add EC2 to known_hosts
+        run: |
+          ssh-keyscan -H ${{ secrets.EC2_IP }} >> ~/.ssh/known_hosts
+
       - name: Copy project files to EC2
         run: |
-          # Install rsync (for copying files)
-          sudo apt-get install -y rsync
-
-          # Sync files from GitHub to EC2
-          rsync -avz --exclude '.git*' ./ ubuntu@3.126.55.131:/home/ubuntu/ecommerce/
-        env:
-          YOUR_EC2_IP: ${{ secrets.EC2_IP }}
+          rsync -avz --exclude '.git*' ./ ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/ecommerce/
 
       - name: SSH into EC2 and restart Gunicorn
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} << 'EOF'
             cd /home/ubuntu/ecommerce
-            git pull origin main  
-            source venv/bin/activate  
-            pip install -r requirements.txt  
-            sudo systemctl restart gunicorn 
+            git pull origin main
+            source venv/bin/activate
+            pip install -r requirements.txt
+            sudo systemctl restart gunicorn
           EOF
-        env:
-          EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          YOUR_EC2_IP: ${{ secrets.EC2_IP }}
