--- a/.github/workflows/aws-ec2-deploy.yml
+++ b/.github/workflows/aws-ec2-deploy.yml
@@ -33,6 +33,7 @@ jobs:
             git pull origin main
             source venv/bin/activate
             pip install -r requirements.txt
+            python manage.py collectstatic --noinput
             python manage.py migrate
             sudo systemctl restart gunicorn
           EOF
